crates/ink/tests/ui/contract/fail/impl/impl-block-for-non-storage-02.stderr
error[E0308]: mismatched types
  --> tests/ui/contract/fail/impl/impl-block-for-non-storage-02.rs:21:10
   |
21 |     impl NonContract {}
   |          ^^^^^^^^^^^ expected `IsSameType<Contract>`, found `IsSameType<NonContract>`
   |
   = note: expected struct `IsSameType<Contract>`
              found struct `IsSameType<NonContract>`
